# my_gpr

./: CMakeLists.txt  MessageException.h  main.cpp
Entities/: PersonClassEnum.h  RaceEnum.h
Entities/Classes/: BasePersonClass.h  Healer.h  Mage.h  Warrior.h
Entities/Rases/: BaseRace.h  Dwarf.h  Elf.h  Human.h  Ork.h  Undead.h
